fix(ui): increased the size of the video scrubber to make it easier to use on mobile
re #31

--- a/src/components/VideoFeed/index.css
+++ b/src/components/VideoFeed/index.css
@@ -42,8 +42,8 @@ body.fullscreen .video-track-progress.bottom {
 }
 
 .video-track-scrubber {
-  width: 12px;
-  height: 4px;
+  width: 18px;
+  height: 7px;
   border-radius: 23051998px;
   background: blue;
   border: 0;
@@ -51,8 +51,8 @@ body.fullscreen .video-track-progress.bottom {
   flex-shrink: 0;
 }
 .video-track-scrubber.is-dragged {
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: 18px;
 }
 
 html[data-scroll-direction="horizontal"] .feed {
